fix inputs on ios

--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -3,6 +3,8 @@ input[type="number"] {
   width: 100%;
   background: none;
   border: none;
+  box-shadow: none;
+  border-radius: 0;
   border-bottom: 2px solid black;
   transition: border 0.2s;
   padding: 0 0 0.2em 0;
